written more testcases